--- a/src/index.pug
+++ b/src/index.pug
@@ -6,4 +6,4 @@ html(lang="ja")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title development-gulp-template
     body
-        h1 HELLO
+        h1 HEY
