--- a/src/index.pug
+++ b/src/index.pug
@@ -5,5 +5,6 @@ html(lang="ja")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title development-gulp-template
+        link(rel="stylesheet" href="assets/styles/style.css")
     body
-        h1 HEY
+        h1 HELLO!
