--- a/src/index.pug
+++ b/src/index.pug
@@ -6,5 +6,6 @@ html(lang="ja")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title development-gulp-template
         link(rel="stylesheet" href="assets/styles/style.css")
+        script(src="assets/js/main.js" defer) 
     body
         h1 HELLO!
