--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,8 +1,11 @@
 @import 'modules/color.scss';
 @import 'modules/breakpoint.scss';
 
-h1 {
-    color: $color-theme;
+// topページのスタイル（dist後は全てのcssファイルをここに集める）
+#main {
+    h1 {
+        color: $color-theme;
+    }
 }
 
 @media screen and (max-width: $breakpoint) {
