--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,8 @@ html(lang="ja")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title development-gulp-template
-        link(rel="stylesheet" href="assets/styles/style.css")
+        link(rel="stylesheet" href="assets/styles/styles.css")
         script(src="assets/js/main.js" defer) 
     body
-        h1 HELLO!
+        #main
+            h1 HELLO!
