--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang="ja")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title development-gulp-template
         link(rel="stylesheet" href="assets/styles/styles.css")
-        script(src="assets/js/main.js" defer) 
+        script(type="module" src="assets/js/main.js" defer) 
     body
         #main
             h1 HELLO!
